@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-03-03T08:19:20Z",
+  "timestamp" : "2024-03-03T16:16:27Z",
   "count_outdated" : 193024,
   "uniques_outdated" : 1958,
-  "count" : 197336,
+  "count" : 197429,
   "uniques" : 1986,
   "clones" : [
     {
       "timestamp": "2024-02-18T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 111, 299 ],
-      "count_decinc": [ 166, 299 ],
+      "count": 40,
+      "count_minmax": [ 40, 299 ],
+      "count_decinc": [ 259, 299 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-03-03T00:00:00Z",
-      "count": 112,
-      "count_minmax": [ 112, 112 ],
-      "count_decinc": [ 0, 112 ],
+      "count": 205,
+      "count_minmax": [ 112, 205 ],
+      "count_decinc": [ 0, 205 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
